...
    <string name="tool_rectangle">四角</string>
    <string name="menu_reverse">反転</string>
    <string name="menu_color">朱</string>
    <string name="menu_name">名前</string>
    <string name="menu_delete">削除</string>
    <string name="menu_close">閉じる</string>
    <string name="region_name">囲みの名前</string>
    <string name="region_name_hint">名前（任意）</string>
    <string name="discard_edit_title">編集内容を破棄しますか？</string>
    <string name="discard_edit">破棄する</string>
    <string name="continue_edit">編集を続ける</string>
</resources>

